--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <nav class="header__menu menu">
                     <ul class="menu__list">
                         <li class="menu__item">
-                        <a href="#" class="menu__link" id="active">Main</a>
+                        <a href="index.html" class="menu__link" id="active">Home Page</a>
                         </li>
                         <li class="menu__item">
                             <a href="" class="menu__link" id="scroll_bottom_map1">Map</a>
@@ -822,6 +822,7 @@
                 </p>
             </div>
         </div>
+    </div>
     </div>
 
     <script src="js/homepage_scripts.js"></script>
