--- a/pages/usa.html
+++ b/pages/usa.html
@@ -12,11 +12,9 @@
         <link rel="stylesheet" href ="../styles/style_inf.css">
         <link href = "../fonts/gilroy/stylesheet.css" rel = "stylesheet" type = "text/css" />
 
-        <script type="text/javascript" src="js/simple-adaptive-slider.js"></script>
-        <script type="text/javascript" src="js/jquery-3.6.0.js"></script>
-        <script type="text/javascript" src="js/galScript.js"></script>
+        <script type="text/javascript" src="../js/jquery-3.6.0.js"></script>
 
-    <title>The legacy of British Empire</title>
+    <title>United States of America</title>
     </head>
     <body>
     <div class="wrapper">
@@ -28,7 +26,7 @@
                 <nav class="header__menu menu">
                     <ul class="menu__list">
                         <li class="menu__item">
-                        <a href="#" class="menu__link" id="active">Main</a>
+                        <a href="../index.html" class="menu__link" id="active">Home Page</a>
                         </li>
                         <li class="menu__item">
                             <a href="" class="menu__link" id="scroll_bottom_map1">Map</a>
@@ -37,10 +35,7 @@
                             <a href="" class="menu__link" id="scroll_bottom_about_project">About project</a>
                         </li>
                         <li class="menu__item">
-                            <a href="" class="menu__link" id="scroll_bottom_about_creators">About creators</a>
-                        </li>
-                        <li class="menu__item">
-                            <a href="" class="menu__link" id="scroll_bottom_sources">Sources</a>
+                            <a href="" class="menu__link" id="scroll_bottom_about_creators">About creators and Sources</a>
                         </li>
                     </ul>
                 </nav>
@@ -75,7 +70,7 @@
                 </div>
             </div>
 
-            <section class="page__first-box first-box">
+            <section class="page__first-box first-box_usa">
                 <div class="first-box__container _container">
                     <div class="first-box__header header-block">
                         <h2 class="header-block__title">Map</h2>
@@ -819,144 +814,36 @@
 
                 <div class="first-box__container _container">
                     <div class="first-box__header header-block">
-                        <h2 class="header-block__title">About project</h2>
+                        <h2 class="header-block__title">American colonies (1607 - 1783)</h2>
                     </div>
 
-                    <div id="about_project">
+                    <div id="about_project_usa">
                         <div>
-                            <img src="img/british_flag.png" alt="Британский флаг">
+                            <img src="../img/usa_colony.jpg" alt="Британский флаг">
                         </div>
                         <div>
                             <p>
-                                This project aims to show the popularity of the English language and explain why it is so popular.
-                                "The Legacy of the British Empire" is a website with interactive maps of the world, the United Kingdom and the United States.
+                                American colonies, also called thirteen colonies or colonial America, the 13 British colonies
+                                that were established during the 17th and early 18th centuries in what is now a part of the eastern United States.
                                 </p>
                                 <p>
-                                English language is the legacy of the British Empire to the world. The language that is the most popular language of international communication.
-                                The aggressive colonial policy of the British Empire spread the English language to all parts of the world.
+                                    In 1606 King James I of England granted a charter to the Virginia Company of London to colonize
+                                    the American coast anywhere between parallels 34° and 41° north and another charter to the
+                                    Plymouth Company to settle between 38° and 45° north. In 1620 the Plymouth colony took root.
                                 </p>
                                 <p>
-                                At the end of World War II, the main language of two of the three superpowers (USSR, USA, Great Britain) it was English.
-                                Today, the United States has economic, political and military superiority over most other states.
+                                    After the French and Indian War the British government began imposing tighter control on colonial governments.
+                                    Taxes, such as the Sugar Act (1764) and the Stamp Act (1765), aimed at raising revenue from the colonies outraged the colonists and catalyzed a reaction that eventually led to a revolt.
                                 </p>
                                 <p>
-                                The majority of the population of three of the seven Group of Seven countries speak English.
-                                </p>
-                                
-                                <p>
-                                As a result of all this, English has a dominant position in the world.
+                                    On July 2, 1776, the Second Continental Congress, meeting in Philadelphia, “unanimously” by
+                                    the votes of 12 colonies (with New York abstaining) resolved that “These United Colonies are,
+                                    and of right ought to be, Free and Independent states.” Two days later, on July 4, the congress
+                                    approved the Declaration of Independence, which formally cut the colonies’ ties with Great Britain
+                                    and established the United States of America.
                                 </p>
                         </div>
                     </div>
-                </div>
-                <hr>
-            </section>
-
-            <section class="page__second-box second-box">
-                <div class="second-box__container _container">
-                    <div class="second-box__header header-block">
-                        <h2 class="header-block__title">Interesting politics</h2>
-                        <div class="header-block__sub-title">
-                        </div>
-                    </div>
-                    <div class="second-box__body">
-                        <div class="second-box__column">
-                            <article class="second-box__item sec-item">
-                                <div class="sec-item__content _01">
-                                    <h4 class="sec-item__title">King of Great Britain, Northern Ireland and the Commonwealth Realms</h4>
-                                    <div class="sec-item__sub-title">
-                                        The current monarch is Charles III, who became king after the death of his mother, Elizabeth II, on September 8, 2022.
-                                    </div>
-                                    <img src="img/likbez/01.jpg" alt="Some picture">
-                                </div>
-                            </article>
-                        </div>
-                        <div class="second-box__column">
-                            <article class="second-box__item sec-item">
-                                <div class="sec-item__content _02">
-                                    <h4 class="sec-item__title">Prime Minister of the United Kingdom of Great Britain and Northern Ireland</h4>
-                                    <div class="sec-item__sub-title">
-                                        The prime minister formally becomes the monarch, who, according to constitutional custom, must elect the person with 
-                                        the most support in the House of Commons. Current prime minister Rishi Sunak.</div>
-                                    <img src="img/likbez/02.jpg" alt="Some picture">
-                                </div>
-                            </article>
-                        </div>
-                        <div class="second-box__column">
-                            <article class="second-box__item sec-item">
-                                <div class="sec-item__content _03">
-                                    <h4 class="sec-item__title">President of the United States</h4>
-                                    <div class="sec-item__sub-title">
-                                        The President of the United States is elected for a four-year term through indirect (two-stage) elections.
-                                    Current President USA Joseph Biden</div>
-                                    <img src="img/likbez/03.jpg" alt="Some picture">
-                                </div>
-                            </article>
-                        </div>
-                        <div class="second-box__column">
-                            <article class="second-box__item sec-item">
-                                <div class="sec-item__content _04">
-                                    <h4 class="sec-item__title">Democratic Party and Republican Party</h4>
-                                    <div class="sec-item__sub-title">
-                                        The modern party system in the United States is bipartisan, characterized by the dominance 
-                                        of the Democratic and Republican parties.</div>
-                                    <img src="img/likbez/04.jpg" alt="Some picture">
-                                </div>
-                            </article>
-                        </div>
-                    </div>
-                </div>
-                <hr>
-            </section>
-            
-            <section class="page__third-box third-box">
-                <div class="third-box__container _container">
-                    <div class="third-box__header header-block">
-                        <h2 class="header-block__title">From dawn to dusk</h2>
-                        <div class="header-block__sub-title">
-                        </div>
-                    </div>
-                    <div class="third-box__body">
-                        <div class="itcss">
-                            <div class="itcss__wrapper">
-                                <div class="itcss__items">
-                                    <div class="itcss__item _ibg">
-                                        <img src="img/homepage_img/01.jpg">
-                                    </div>
-                                    <div class="itcss__item _ibg">
-                                        <img src="img/homepage_img/02.jpg">
-                                    </div>
-                                    <div class="itcss__item _ibg">
-                                        <img src="img/homepage_img/03.jpg">
-                                    </div>
-                                    <div class="itcss__item _ibg">
-                                        <img src="img/homepage_img/04.jpg">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="third-box__content">
-                            <h2 class="third-box__title"></h2>
-                            <div class="third-box__text">
-                                <p>
-                                    The British Empire was the biggest empire in world history – and there’s a reason why its nickname was the 
-                                    ‘empire on which the sun never sets’. It covered nearly a quarter of the world, dominating some twenty-three 
-                                    percent of the world’s population and twenty-four percent of the surface of the planet (pic. 2).
-                                </p>
-                                <p>
-                                    British imperial activity began in the late sixteenth centuryю. Elizabeth I began a policy of exploration in the Americas 
-                                    and pursued naval conflicts with the Spanish. People like Walter Raleigh and Francis Drake (pic. 3) were engaged in piracy looting the spoils 
-                                    of Spanish discoveries and trying to establish colonies of their own.
-                                </p>
-                                <p>
-                                    In contexts, such as India, where the native population was not destroyed by the colonists, 
-                                    the imperial regime often used native upper classes to rule under the control of the British. 
-                                    Mahatma Gandhi (pic. 4) is a legendary man, the father of the nation, a quiet and modest man who proved 
-                                    to the whole world that the struggle for rights and justice can take place without aggression and bloodshed.
-                                </p>
-                            </div>
-                    </div>
-                </div>
                 </div>
             </section>
         </main>
@@ -995,7 +882,7 @@
         </footer>
     </div>
 
-    <script src="js/homepage_scripts.js"></script>
+    <script src="js/page_usa_scripts.js"></script>
     <script src="js/inf_script_usa.js"></script>
     </body>
 </html>
