--- a/index.html
+++ b/index.html
@@ -785,14 +785,15 @@
                             <div class="footer-top__title">About creators</div>
                             <div class="footer-top__text">
                                 <p>
-                                    Website created in 2023
+                                    Веб-сайт создан для НИРС по английскому языку в 2023 году.
                                 </p>
                                 <p>
-                                    Project developers:
+                                    Разработчики проекта:
                                 </p>
-                                <p>Students of the USTU</p>
-                                <p>group IVTASbd-21</p>
-                                <p>Zyuzin Georgiy and Abrosimov Konstantin.</p>
+                                <p>Студенты УлГТУ</p>
+                                <p>группы ИВТАСбд-21</p>
+                                <p>Абросимов Константин и Зюзин Георгий</p>
+                                <p>Научный руководитель проекта: Кузьмина Елена Валерьевна</p>
                             </div>
                      </div>
                 </div>
