--- a/pages/uk.html
+++ b/pages/uk.html
@@ -291,9 +291,6 @@
                                     in North America and West Indian, South Asian, and African trading posts founded by private individuals and trading companies.
                                 </p>
                                 <p>
-                                    In 1957 the Gold Coast became the first sub-Saharan African colony of the British Empire to reach independence (as Ghana).
-                                </p>
-                                <p>
                                     The last significant colony of the British Empire was Hong Kong. It was returned to Chinese sovereignty in 1997.
                                 </p>
                                 <p>
@@ -314,14 +311,15 @@
                             <div class="footer-top__title">About creators</div>
                             <div class="footer-top__text">
                                 <p>
-                                    Website created in 2023
+                                    Веб-сайт создан для НИРС по английскому языку в 2023 году.
                                 </p>
                                 <p>
-                                    Project developers:
+                                    Разработчики проекта:
                                 </p>
-                                <p>Students of the USTU</p>
-                                <p>group IVTASbd-21</p>
-                                <p>Zyuzin Georgiy and Abrosimov Konstantin.</p>
+                                <p>Студенты УлГТУ</p>
+                                <p>группы ИВТАСбд-21</p>
+                                <p>Абросимов Константин и Зюзин Георгий</p>
+                                <p>Научный руководитель проекта: Кузьмина Елена Валерьевна</p>
                             </div>
                      </div>
                 </div>
@@ -331,7 +329,7 @@
                     <div class="footer-bottom__body">
                         <div class="footer-top__title">Sources</div>
                         <div>
-                            <p>Download file with links to sources - <a href="Источники.txt">Download</a></p>
+                            <p>Download file with links to sources - <a href="../Источники.txt">Download</a></p>
                         </div>
                         <div class="footer-bottom__icons">
                             
