develop_cards (add quiz) 13.04.2023

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
                         <li class="menu__item">
                             <a href="" class="menu__link" id="scroll_bottom_sources">Sources</a>
                         </li>
+                        <li class="menu__item">
+                            <a href="pages/quiz.html" class="menu__link" id="quiz_page">Quiz</a>
+                        </li>
                     </ul>
                 </nav>
 
@@ -153,7 +156,7 @@
                                     Republic of the Marshall Islands, Republic of Palau, Republic of Nauru, Tuvalu.
                                 </p>
                                 <p>All the listed countries gained independence from Great Britain and other countries in the period 1962-1986</p>
-                                <p>Source: <a href='https://www.britannica.com' target='_blank'>https://www.britannica.com</a> (Accessed 12 March 2023)</p>"
+                                <p>Source: <a href='https://www.britannica.com/place/Oceania-region-Pacific-Ocean' target='_blank'>https://www.britannica.com/place/Oceania-region-Pacific-Ocean</a> (Accessed 12 March 2023)</p>"
                                 data-title="Oceania"  data-photo="img/flags/oceania.jpg" >
                                 <title>
                                     <title>&#10697; Oceania</title>
